--- a/Personal-Website/src/components/navbar/navbar.html
+++ b/Personal-Website/src/components/navbar/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg bg-body-tertiary navbar-dark bg-dark m-3">
   <div class="container-fluid">
     <a class="navbar-brand text-in-nav" href="#">{{title}}</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
