Added a timeline and fixed programming-languages

--- a/Personal-Website/src/app/app.html
+++ b/Personal-Website/src/app/app.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
 <app-header-name></app-header-name>
 <app-programming-languages></app-programming-languages>
+<app-timeline></app-timeline>
 <router-outlet></router-outlet>
