expended the timeline for mobile

--- a/Personal-Website/src/app/app.html
+++ b/Personal-Website/src/app/app.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<app-header-name></app-header-name>
+<app-header-name [title]="'Hey there, I am Jan'" ></app-header-name>
 <app-programming-languages></app-programming-languages>
 <app-timeline></app-timeline>
 <router-outlet></router-outlet>
