--- a/Personal-Website/src/components/timeline/timeline.html
+++ b/Personal-Website/src/components/timeline/timeline.html
@@ -1,4 +1,4 @@
-
+<app-header-name [title]="'My journey'" ></app-header-name>
 <div class="container text-center justify-content-center" (load)="loadInCards()">
 
 </div>
