--- a/Personal-Website/src/components/timeline/timeline.css
+++ b/Personal-Website/src/components/timeline/timeline.css
@@ -1,14 +1,56 @@
 .border-right
 {
   border-right: 2px solid #800ac4;
+
 }
 
 .border-left
 {
   border-left: 2px solid #800ac4;
+
 }
 
 .border-top
 {
   border-top: 2px solid #800ac4;
+}
+
+
+@keyframes fly-in-from-left {
+  0% {
+    transform: translateX(-100%);
+    border-left-color: transparent;
+    opacity: 0;
+  }
+  50% {
+    transform: translateX(-50%);
+    border-left-color: transparent;
+    opacity: 0.5;
+  }
+  100% {
+    transform: translateX(0);
+    border-left-color: #800ac4;
+    opacity: 1;
+  }
+
+}
+
+@keyframes fly-in-from-right {
+  0%
+  {
+    transform: translateX(100%);
+    border-right-color: transparent;
+    opacity: 0;
+  }
+  50% {
+    transform: translateX(50%);
+    border-right-color: transparent;
+    opacity: 0.5;
+  }
+  100% {
+    transform: translateX(0);
+    border-right-color: #800ac4;
+    opacity: 1;
+  }
+
 }
