--- a/Personal-Website/src/components/introduction/introduction.html
+++ b/Personal-Website/src/components/introduction/introduction.html
@@ -1,2 +1,2 @@
 <app-header-name [title]="title"></app-header-name>
-<p class = "fs-3 text-center fw-medium">{{text}}</p>
+<p class = "fs-3 text-center fw-medium m-5">{{text}}</p>
