--- a/Personal-Website/src/components/programming-languages/programming-languages.html
+++ b/Personal-Website/src/components/programming-languages/programming-languages.html
@@ -1,9 +1,12 @@
+<app-header-name [title]="'Programming Languages'"></app-header-name>
 <div class="container-fluid text-center">
   <div class="row row-cols-2">
     @for (image of imageUrls; track image.url)
     {
       <div class = "col">
-        <img [src]="image.url" class = "img-fluid icon m-3" loading="lazy">
+        <a [href]="image.link" target="_blank">
+        <img [src]="image.url" [alt]="image.url" class = "img-fluid icon m-3" loading="lazy">
+        </a>
       </div>
     }
   </div>
