--- a/Personal-Website/src/components/timeline/timeline.css
+++ b/Personal-Website/src/components/timeline/timeline.css
@@ -1,75 +1,52 @@
-.border-right
+div.card.m-5.p-3.border-right
 {
   border-right: 2px solid #800ac4 !important;
-
 }
 
-.border-left
+div.border-left
 {
   border-left: 2px solid #800ac4 !important;
 
 }
 
-.border-top
+div.border-top
 {
   border-top: 2px solid #800ac4 !important;
 }
-.border-bottom
+div.border-bottom
 {
   border-bottom: 2px solid #800ac4 !important;
 }
 
+hr.horizontal-line
+{
+  color: #800ac4 !important;
+  background-color: #800ac4 !important;
+  height: 2px !important;
+  border: none !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  width: 100% !important;
 
-@keyframes fly-in-from-left {
-  0% {
-    transform: translateX(-100%);
-    border-left-color: transparent;
-    opacity: 0;
-  }
-  50% {
-    transform: translateX(-50%);
-    border-left-color: transparent;
-    opacity: 0.5;
-  }
-  100% {
-    transform: translateX(0);
-    border-left-color: #800ac4;
-    opacity: 1;
-  }
 
 }
-
-@keyframes fly-in-from-right {
-  0%
-  {
-    transform: translateX(100%);
-    border-right-color: transparent;
-    opacity: 0;
-  }
-  50% {
-    transform: translateX(50%);
-    border-right-color: transparent;
-    opacity: 0.5;
-  }
-  100% {
-    transform: translateX(0);
-    border-right-color: #800ac4;
-    opacity: 1;
-  }
-
+div.vertical-line
+{
+  width: 2px !important;
+  background-color: #800ac4 !important;
+  height: 100% !important;
+  margin: 0 auto !important;
 }
 
 @keyframes fly-in-from-left-without-breaks {
   from
   {
     transform: translateX(-100%);
-    border-left-color: transparent;
     opacity: 0;
   }
   to
   {
     transform: translateX(0);
-    border-left-color: #800ac4;
     opacity: 1;
   }
 }
@@ -78,13 +55,11 @@
   from
   {
     transform: translateX(100%);
-    border-right-color: transparent;
     opacity: 0;
   }
   to
   {
     transform: translateX(0);
-    border-right-color: #800ac4;
     opacity: 1;
   }
 }
