--- a/Personal-Website/src/components/navbar/navbar.html
+++ b/Personal-Website/src/components/navbar/navbar.html
@@ -1,27 +1,16 @@
+<div id="start"></div>
 <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-dark bg-dark m-3">
   <div class="container-fluid">
-    <a class="navbar-brand text-in-nav" href="#">{{title}}</a>
+
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
+        <li class = "nav-item fs-5"><a [routerLink]="'/'" (click)="scrollToTop()" class = "nav-link text-in-nav">{{title}}</a></li>
         @for (item of navbarItems; track item) {
-          <li class = "nav-item"><a routerLink = "item.url" class = "nav-link text-in-nav">{{item.name}}</a></li>
+          <li class = "nav-item fs-5"><a [routerLink]="item.url" [fragment]="item.fragment" class = "nav-link text-in-nav">{{item.name}}</a></li>
         }
-
-
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle text-in-nav" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu">
-            @for (link of links; track link) {
-              <li><a class="dropdown-item text-in-nav" routerLink ="{{link.url}}">{{link.name}}</a></li>
-            }
-          </ul>
-        </li>
 
       </ul>
       <form class="d-flex" role="search">
