--- a/Personal-Website/src/components/programming-languages/programming-languages.html
+++ b/Personal-Website/src/components/programming-languages/programming-languages.html
@@ -1,4 +1,4 @@
-<app-introduction [title]="'</>Skills'" [text]="'Over my two years at the HTL Leonding I learned several skills'"></app-introduction>
+<app-introduction [id]="'programming-languages'" [title]="'</>Skills'" [text]="'Over my two years at the HTL Leonding I learned several skills'"></app-introduction>
 <div class="container-fluid text-center">
   <div class="row row-cols-2">
     @for (image of imageUrls; track image.url)
