Made some progress at the styling on the project part

--- a/Personal-Website/src/app/app.html
+++ b/Personal-Website/src/app/app.html
@@ -3,5 +3,6 @@
 
 <app-programming-languages></app-programming-languages>
 <app-timeline></app-timeline>
+<app-projects></app-projects>
 <router-outlet></router-outlet>
 
