--- a/Personal-Website/src/components/projects/projects.html
+++ b/Personal-Website/src/components/projects/projects.html
@@ -1,21 +1,13 @@
 <app-introduction [title]="'My projects'" [text]="'Here are my projects, that I have done'"></app-introduction>
-  <div class = "row row-cols-1" id = "projects">
-    @for (repo of repos; track repo.name) {
-      <div class = "col m-5">
-        <div class="card original-card">
-          <div class="card-body">
-            <div class = "row row-cols-2">
-              <div class = "col text-start">
-                <h5 class="card-title">{{repo.name}}</h5>
-              </div>
-              <div class = "col text-end">
-                <a class="btn btn-primary" [href]="repo.url" target="_blank">View on GitHub</a>
-              </div>
-            </div>
-          </div>
+<div class="d-flex flex-column justify-content-center align-items-center">
+  @for (repo of repos; track repo.name) {
+    <div class="card card-project m-4" style="width: 70%;">
+      <div class="card-body">
+        <div class="d-flex justify-content-between align-items-center">
+          <h5 class="card-title card-title-project mb-0">{{ repo.name }}</h5>
+          <a [href]="repo.url" class="btn btn-primary" target="_blank">View on GitHub</a>
         </div>
       </div>
-    }
-  </div>
-
-
+    </div>
+  }
+</div>
