made a footer but not finished

--- a/Personal-Website/src/app/app.html
+++ b/Personal-Website/src/app/app.html
@@ -4,5 +4,6 @@
 <app-programming-languages></app-programming-languages>
 <app-timeline></app-timeline>
 <app-projects></app-projects>
+<app-footer></app-footer>
 <router-outlet></router-outlet>
 
