--- a/Personal-Website/src/components/navbar/navbar.html
+++ b/Personal-Website/src/components/navbar/navbar.html
@@ -7,7 +7,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class = "nav-item fs-5"><a [routerLink]="'/'" fragment = "start" class = "nav-link text-in-nav">{{title}}</a></li>
+        <li class = "nav-item fs-5"><a [routerLink]="'/'" (click)="scrollToTop()" class = "nav-link text-in-nav">{{title}}</a></li>
         @for (item of navbarItems; track item) {
           <li class = "nav-item fs-5"><a [routerLink]="item.url" [fragment]="item.fragment" class = "nav-link text-in-nav">{{item.name}}</a></li>
         }
