--- a/Personal-Website/src/components/navbar/navbar.html
+++ b/Personal-Website/src/components/navbar/navbar.html
@@ -24,11 +24,7 @@
           }
         }
       </ul>
-
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+      <a href = "https://github.com/JBrunnerhtl" target="_blank"><img src = "https://www.svgrepo.com/show/450156/github.svg" style = "height: 40px" alt = "GitHub profile"></a>
     </div>
   </div>
 </nav>
