--- a/Personal-Website/src/components/projects/projects.html
+++ b/Personal-Website/src/components/projects/projects.html
@@ -3,9 +3,11 @@
   @for (repo of repos; track repo.name) {
     <div class="card card-project m-4" style="width: 70%;">
       <div class="card-body">
-        <div class="d-flex justify-content-between align-items-center">
-          <h5 class="card-title card-title-project mb-0">{{ repo.name }}</h5>
-          <a [href]="repo.url" class="btn btn-primary" target="_blank">View on GitHub</a>
+        <div class="d-flex justify-content-between align-items-center flex-column flex-md-row">
+          <h5 class="card-title card-title-project mb-2 mb-md-0">{{ repo.name }}</h5>
+          <a [href]="repo.url" class="btn btn-primary w-md-auto mt-2 mt-md-0" target="_blank">
+            View on GitHub
+          </a>
         </div>
       </div>
     </div>
