--- a/Personal-Website/src/components/projects/projects.html
+++ b/Personal-Website/src/components/projects/projects.html
@@ -5,7 +5,7 @@
       <div class="card-body">
         <div class="d-flex justify-content-between align-items-center flex-column flex-md-row">
           <h5 class="card-title card-title-project mb-2 mb-md-0">{{ repo.name }}</h5>
-          <a [href]="repo.url" class="btn btn-primary w-md-auto mt-2 mt-md-0" target="_blank">
+          <a [href]="repo.url" class="btn btn-primary w-md-auto mt-2 mt-md-0"  style="background-color: var(--button-project-color); color: var(--button-project-text-color); border-color: var(--button-project-color)" target="_blank">
             View on GitHub
           </a>
         </div>
